# fastapi_invest

./: README.md  pyproject.toml  requirements.txt  run.py
scripts/: create_super_user.py
src/: .env.example  main.py
src/auth/models/: auth.py  users.py
src/auth/repositories/: users.py
src/auth/routes/: auth.py
src/auth/schemas/: users.py
src/auth/services/: auth.py  users.py
src/config/: __base_config.py  __init__.py  database.py  security.py
src/iol/handlers/: __init__.py  connect_iol.py  mi_cuenta_estado.py  mi_cuenta_portafolio.py  titulos_fcis.py
src/iol/models/: __init__.py  mi_cuenta.py
src/iol/repositories/: __init__.py  base_repository.py  mi_cuenta_estado.py  mi_cuenta_portafolio.py  titulos.py
src/iol/routes/: __init__.py  mi_cuenta.py  mi_cuenta_estado.py  mi_cuenta_portafolio.py  titulos.py
src/iol/schemas/: __init__.py  common.py  connect_iol.py  example_response.txt  mi_cuenta.py  mi_cuenta_estado.py  mi_cuenta_portafolio.py  titulos.py
src/iol/services/: __init__.py  mi_cuenta.py  mi_cuenta_estado.py  mi_cuenta_portafolio.py  titulos.py
src/pyrofex/handlers/: connect_primary.py  instrumentos.py  instrumentos_detallados.py  instruments.py  instruments_by_cficode.py  instruments_by_segment.py  instruments_details.py  segmentos.py  segments.py
src/pyrofex/schemas/: __init__.py  common.py  connect_primary.py  instrumentos.py  instrumentos_detallados.py  instruments.py  instruments_by_cficode.py  instruments_by_segment.py  instruments_details.py  segmentos.py  segments.py
src/rava/handleres/: __init__.py  connect.py  get_bonos.py  scrap_bond_info.py  scrap_bonds.py  scrapt_bonds.py
src/rava/routes/: __init__.py  bonds.py
src/rava/schemas/: bonds.py
src/rava/services/: __init__.py  bond_info.py
src/utils/: __init__.py  auth.py  convert.py  scrap.py  validate.py
templates/: argparse.py
