[tool.poetry]
name = "fastapi-invest"
version = "0.1.0"
description = ""
authors = ["Fernando Corrales <corrales_fernando@hotmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
httpx = "^0.28.1"
pandas = "^2.2.3"
motor = "^3.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"