[tool.poetry]
name = "fastapi-invest"
version = "0.1.0"
description = ""
authors = ["Fernando Corrales <corrales_fernando@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
httpx = "^0.28.1"
pandas = "^2.2.3"
motor = "^3.7.0"
bs4 = "^0.0.2"
pytest-playwright = "^0.7.0"
fastapi-jwt = {extras = ["authlib"], version = "^0.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ptpython = "^3.0.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"